images don't display properly

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,3 +1,14 @@
 <head>
 	<title>Image Search</title>
-</head>>
+	<style>
+		body {
+			background-image: url("<%= imageUrl %>");
+			background-repeat: no-repeat;
+			background-size: cover;
+			text-align: center;
+		}
+	</style>
+	<link href="css/styles.css" rel="stylesheet">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+	<script src="js/index.js"></script>
+</head>
