--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,7 +12,7 @@
 			</form>
 		</main>
 
-		<%- include('partials/header.ejs') %>
+		<%- include('partials/footer.ejs') %>
 		 
     </body>
 </html>
