--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,6 +9,7 @@
 				<input type="text" placeholder="Type keyword" name="keyword" />
 				<br><br>
 				<button>Search</button>
+				<br><a href="/getKeywords"> See Favorites </a>
 			</form>
 		</main>
 
